fixed horizontal scrollbar on denis novik's site

--- a/lesson-five-css/css-denis-novik/denis-novik.css
+++ b/lesson-five-css/css-denis-novik/denis-novik.css
@@ -14,6 +14,11 @@
   --message-color: rgb(255, 255, 255);
 }
 
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
@@ -21,12 +26,12 @@ a {
 /* Block 1: header with navigation  */
 
 .navigation {
-  max-width: 45vw;
+  width: 45%;
   margin: 0 auto;
 }
 
 .border-bottom {
-  max-width: 60vw;
+  width: 60%;
   margin: 0 auto;
   border-bottom: 2px solid var(--additional-text-color);
   margin-top: 1em;
@@ -59,13 +64,12 @@ a:active {
 }
 
 .denis-novik-foto {
-  width: 60vw;
+  width: 60%;
 }
 
 /* Block 2: About Denis Novik */
 
 .bg-banner {
-  width: 100%;
   height: 30em;
   background: url(../assets-denis-novik/bg.png);
   background-position: center;
@@ -95,7 +99,7 @@ a:active {
 }
 
 .programs {
-  max-width: 60vw;
+  width: 60%;
   margin: 4em auto;
   display: flex;
   justify-content: space-around;
@@ -127,7 +131,7 @@ a:active {
 
 .site-link-img {
   display: block;
-  width: 60vw;
+  width: 60%;
   margin: 4em auto 1em;
 }
 
@@ -159,7 +163,7 @@ a:active {
 .social-media {
   display: flex;
   justify-content: space-around;
-  width: 18vw;
+  width: 18%;
   margin: 0 auto;
 }
 
@@ -173,5 +177,4 @@ a:active {
   color: var(--additional-text-color);
   text-align: center;
   margin: 2em auto 6em;
-
 }
